--- a/src/index.scss
+++ b/src/index.scss
@@ -2,20 +2,30 @@
 //       Variables       ////       Variables       //
 //////////////////////////////////////////////////////
 
-$background-color: #222222;
-$search-bg: #3e3e3e;
-$text-color: #dee4e7;
+// $background-color: #222222;
+// $search-bg: #3e3e3e;
+// $text-color: #dee4e7;
+// $secondary-text-color: #ff9d5b;
+
+:root {
+  --bg-clr: #272727;
+  --clr-search: #3e3e3e;
+  --clr-text: #dee4e7;
+  --clr-secondary-text: #ff9d5b;
+}
 
 .dark-mode {
-  $background-color: #222222;
-  $search-bg: #3e3e3e;
-  $text-color: #dee4e7;
+  --bg-clr: #272727;
+  --clr-search: #3e3e3e;
+  --clr-text: #dee4e7;
+  --clr-secondary-text: #ff9d5b;
 }
 
 .light-mode {
-  $background-color: #dee4e7;
-  $search-bg: #fff;
-  $text-color: #222222;
+  --bg-clr: #dee4e7;
+  --clr-search: #fff;
+  --clr-text: #272727;
+  --clr-secondary-text: #D1512D;
 }
 
 *,
@@ -25,11 +35,12 @@ $text-color: #dee4e7;
   padding: 0;
   box-sizing: border-box;
 }
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background: $background-color;
-  color: $text-color;
+  background: var(--bg-clr);
+  color: var(--clr-text);
   line-height: 1.5;
   transition: all 0.3s linear;
 }
@@ -41,11 +52,26 @@ body {
 nav {
   .nav-center {
     width: 90vw;
-    max-width: 600px;
+    max-width: 900px;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 2rem 0;
+  }
+
+  h1 {
+    font-size: 2rem;
+  }
+
+  span {
+    color: var(--clr-secondary-text);
+  }
+
+  button {
+    color: var(--clr-text);
+    font-size: 2rem;
+    background-color: transparent;
+    border: none;
   }
 }
