--- a/src/index.scss
+++ b/src/index.scss
@@ -25,7 +25,7 @@
   --bg-clr: #dee4e7;
   --clr-search: #fff;
   --clr-text: #272727;
-  --clr-secondary-text: #D1512D;
+  --clr-secondary-text: #d1512d;
 }
 
 *,
@@ -73,5 +73,38 @@ nav {
     font-size: 2rem;
     background-color: transparent;
     border: none;
+  }
+}
+
+////////////////////////////////////////////////////////////////////////
+//       Search       ////       Search       ////       Search       //
+////////////////////////////////////////////////////////////////////////
+
+.search-box {
+  margin-top: 2rem;
+  width: 85vw;
+  max-width: 40rem;
+  margin: 1rem auto 0;
+  text-align: center;
+
+  transition: all 0.2s linear;
+
+  &:hover {
+    transform: scale(1.03);
+  }
+
+  input {
+    font-size: 1.5rem;
+    padding: 0.5rem 0.4rem;
+    width: 100%;
+    text-align: center;
+    background-color: var(--clr-search);
+    color: var(--clr-text);
+    border: none;
+    outline: none;
+    border-radius: 0.5rem;
+    &:hover {
+      transform: scale(1.03);
+    }
   }
 }
