--- a/src/index.scss
+++ b/src/index.scss
@@ -127,3 +127,8 @@ nav {
     cursor: pointer;
   }
 }
+
+//////////////////////////////////////////////////////////////////
+//       Card       ////       Card       ////       Card       //
+//////////////////////////////////////////////////////////////////
+
