--- a/src/index.scss
+++ b/src/index.scss
@@ -133,11 +133,33 @@ nav {
 //////////////////////////////////////////////////////////////////
 
 .list-container {
-  margin: 3rem auto 2rem;
-  width: 90vw;
-  max-width: 1170px;
-  display: grid;
-  justify-content: space-around;
-  grid-template-columns: repeat(auto-fill, 250px);
-  gap: 2rem;
+  margin: 3rem 0;
+
+  .cards {
+    display: grid;
+    margin: 0 auto;
+    row-gap: 2rem;
+    column-gap: 3rem;
+    width: 90vw;
+    max-width: 1170px;
+    justify-content: center;
+  }
+
+  @media (min-width: 745px) {
+    .cards {
+      grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+    }
+  }
+
+}
+
+//////////////////////////////////////////////////////////////////
+//       List       ////       List       ////       List       //
+//////////////////////////////////////////////////////////////////
+
+.card img {
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
+  overflow: hidden;
 }
