--- a/src/index.scss
+++ b/src/index.scss
@@ -138,7 +138,7 @@ nav {
   .cards {
     display: grid;
     margin: 0 auto;
-    row-gap: 2rem;
+    row-gap: 3rem;
     column-gap: 3rem;
     width: 90vw;
     max-width: 1170px;
@@ -147,19 +147,59 @@ nav {
 
   @media (min-width: 745px) {
     .cards {
-      grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     }
   }
-
 }
 
 //////////////////////////////////////////////////////////////////
 //       List       ////       List       ////       List       //
 //////////////////////////////////////////////////////////////////
 
-.card img {
-  width: 100%;
-  height: 400px;
-  object-fit: cover;
-  overflow: hidden;
+.card-container {
+  position: relative;
+  text-align: center;
+  transition: all 2s linear;
+
+  .info-container {
+    text-transform: capitalize;
+    color: white;
+    text-shadow: 2px 2px 2px black;
+    width: 90%;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: all 0.2s linear;
+
+    h4 {
+      font-size: 1.5rem;
+      margin: 0.75rem;
+    }
+
+     p {
+      font-size: 1.2rem;
+      margin-top: 0.5rem;
+     }
+
+  }
+
+  .card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    overflow: hidden;
+    transition: all 0.3s linear;
+  }
+
+  &:hover {
+    img {
+      filter: blur(10px);
+    }
+
+    .info-container {
+      opacity: 1;
+    }
+  }
 }
