fetched single movie data via id

--- a/src/index.scss
+++ b/src/index.scss
@@ -213,6 +213,14 @@ nav {
 //       Movie       ////       Movie       ////       Movie       //
 /////////////////////////////////////////////////////////////////////
 
+.movie-container {
+  display: flex;
+  justify-content: space-between;
+  width: 85vw;
+  max-width: 1170px;
+  background-color: white;
+}
+
 ////////////////////////////////////////////////////////////////////////
 //       Loader       ////       Loader       ////       Loader       //
 ////////////////////////////////////////////////////////////////////////
