--- a/src/index.scss
+++ b/src/index.scss
@@ -85,6 +85,12 @@ nav {
     background-color: transparent;
     border: none;
     text-shadow: 1rem 1rem 1rem var(--clr-text);
+    cursor: pointer;
+    transition: all 0.3s ease;
+
+    &:hover {
+      transform: rotate(360deg);
+    }
   }
 }
 
@@ -136,10 +142,7 @@ nav {
     font-size: 1.5rem;
     padding: 0.5rem;
     cursor: pointer;
-
-    &:hover {
-      transform: rotate(35deg);
-    }
+    transition: all 0.3s linear;
   }
 }
 
